--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <properties>
     <cxf.version>3.0.3</cxf.version>
     <jackson.version>1.9.13</jackson.version>
-    <spring.version>4.1.2.RELEASE</spring.version>
+    <spring.version>[4.3.17,)</spring.version>
     <junit.version>4.11</junit.version>
     <surefire.version>2.10</surefire.version>
     <h2.version>1.3.176</h2.version>
